
- Added lex/flex edit mode (Matthieu Casanova)

- New mode for Oracle PL/SQL 11. (#3078863 - Diogo Kollross)

- Haxe mode update (Dion Amago # 3123602)

- Updated erlang mode and associated *.hrl to erlang language
  (patch #3042398 from jclopes, Matthieu Casanova)

- Added coffee edit mode (patch #3173375 from Dennis Hotson, Matthieu Casanova)

}}}
{{{ UI
- Ability to customize the browser context menu (feature #3354306)
  (Matthieu Casanova)

- New Status bar widget to monitor task manager. (feature #3316561)
  (Matthieu Casanova)

- Moved Default Line Separator Char from General to Encodings Option Pane.
  
- The Statusbar widget choice in global options has now a preview to see how
  the status bar will look like (Matthieu Casanova)

- A new status bar widget is added to show the last modified time of the current
  buffer (feature request #1551454 - Matthieu Casanova)

- The Macros menu can now be splitted if there are too many macros or
  macro folders (#3172647 - Matthieu Casanova)

- Updated ColorWellButton to use the dialog provided by JColorChooser rather
  than creating its own dialog since the JColorChooser dialog is much richer.
  (Dale Anson)

- Filter field in PluginManager InstallPanel (#2810926 - Olivier Chafik)

- New View option: Floatable toolbars. (Alan Ezust)

- New TextArea Option: Choice of color ordering w/ subpixel antialiasing.
  (#2989209 - Alan Ezust)

- In conjunction with the fix for tracker 3134215, added a new option to the
  General options pane to let the user choose whether to restore the split
  configuration. (Dale Anson)

- If jEdit doesn't have rights to save a buffer, the dialog doesn't display
  an exception anymore, making the error message less dramatic.
  (Matthieu Casanova)

}}}
{{{ Miscellaneous
- jEdit has now a systray icon. It can be replaced by implementing the
  org.gjt.sp.jedit.gui.tray.JEditTrayIcon service(feature #1657143)
  (Matthieu Casanova)

- VFS Browser jobs now use the new Task api (Matthieu Casanova)
